# larkar_demos

./: .gitignore  README.md
client_android_native/: README.md
client_android_native/larkar_android/: .gitignore  build.gradle  config.gradle  demo.jks  settings.gradle
client_android_native/larkar_android/gradle/wrapper/: gradle-wrapper.properties
client_android_native/larkar_android/larkar_h5ui/: build.gradle
client_android_native/larkar_android/larkar_h5ui/src/androidTest/java/com/pxy/larkar_h5ui/: ExampleInstrumentedTest.java
client_android_native/larkar_android/larkar_h5ui/src/main/: AndroidManifest.xml
client_android_native/larkar_android/larkar_h5ui/src/main/assets/web/: index.html
client_android_native/larkar_android/larkar_h5ui/src/main/assets/web/css/: app.49da5a65.css  app.4a97f149.css  app.852e52fa.css  app.8cc28faf.css  app.9ec22878.css  app.caa1bab8.css  app.db903994.css  app.fd16ebc1.css  chunk-vendors.f2bd40a6.css
client_android_native/larkar_android/larkar_h5ui/src/main/assets/web/js/: about.9661689c.js  app.304a9b6d.js  app.69d0f87d.js  app.6d4ac951.js  app.8470b123.js  app.9b1b93e8.js  app.bda17e2c.js  app.bee8a184.js  app.c6f94359.js  app.e825f18d.js  app.f2086012.js  app.fd6db665.js  chunk-vendors.289fe214.js  chunk-vendors.3bb69a5f.js
client_android_native/larkar_android/larkar_h5ui/src/main/java/com/pxy/larkar_h5ui/: MainActivity.java
client_android_native/larkar_android/larkar_h5ui/src/main/res/values/: strings.xml  themes.xml
client_android_native/larkar_android/larkar_h5ui/src/main/res/values-night/: themes.xml
client_android_native/larkar_android/larkar_h5ui/src/test/java/com/pxy/larkar_h5ui/: ExampleUnitTest.java
client_android_native/larkar_android/lib_larkar/: build.gradle
client_android_native/larkar_android/lib_larkar/libs/: larkxr-kit-3.2.2.0-build-1.aar
client_android_native/larkar_android/lib_larkar/src/androidTest/java/com/pxy/liblarkar/: ExampleInstrumentedTest.java
client_android_native/larkar_android/lib_larkar/src/main/: AndroidManifest.xml
client_android_native/larkar_android/lib_larkar/src/main/cpp/: CMakeLists.txt  ar_application.cpp  ar_application.h  ar_manager_interface.h  cloudxr_client.cpp  cloudxr_client.h  huawei_arengine_interface.h  jni_interface.cc  jni_interface.h  util.cpp  util.h
client_android_native/larkar_android/lib_larkar/src/main/cpp/arcore/: arcore_background_render.cpp  arcore_background_render.h  arcore_manager.cpp  arcore_manager.h  arcore_plane_render.cpp  arcore_plane_render.h  arcore_texture.cpp  arcore_texture.h
client_android_native/larkar_android/lib_larkar/src/main/cpp/hw_arengine/: arengine_background_render.cpp  arengine_background_render.h  arengine_manager.cpp  arengine_manager.h  arengine_plane_render.cpp  arengine_plane_render.h
client_android_native/larkar_android/lib_larkar/src/main/java/com/pxy/liblarkar/: ArActivity.java  ConnectAppMarketActivity.java  DisplayRotationManager.java  JniInterface.java  PermissionManager.java
client_android_native/larkar_android/lib_larkar/src/main/res/layout/: activity_ar.xml
client_android_native/larkar_android/lib_larkar/src/main/res/values/: strings.xml
client_android_native/larkar_android/lib_larkar/src/test/java/com/pxy/liblarkar/: ExampleUnitTest.java
client_android_native/larkar_android/lib_larkvr/: build.gradle  lint-baseline.xml
client_android_native/larkar_android/lib_larkvr/src/main/: AndroidManifest.xml
client_android_native/larkar_android/lib_larkvr/src/main/cpp/: CMakeLists.txt  cloudxr_client.cpp  cloudxr_client.h  hello_cardboard_app.cc  hello_cardboard_app.h  hello_cardboard_jni.cc  util.h
client_android_native/larkar_android/lib_larkvr/src/main/java/com/pxy/liblarkvr/: VrActivity.java
client_android_native/larkar_android/lib_larkvr/src/main/res/values/: strings.xml
client_android_native/larkar_android/libs/: .gitignore  cardboard-sdk-release-1.16.aar
client_android_native/ui_vue/: README.md  package.json  vue.config.js
client_android_native/ui_vue/src/: App.vue  main.js
client_android_native/ui_vue/src/router/: index.js
client_android_native/ui_vue/src/store/: index.js
client_android_native/ui_vue/src/utils/: fetch.js  native.js
client_android_native/ui_vue/src/utils/i18n/: en.json  i18n.js  tw.json  zh.json
client_android_native/ui_vue/src/views/: First.vue  Index.vue  Setup.vue  WebClient.vue
client_unity/ar_dragon/Assets/Scenes/: SampleScene.unity
cloudapp_unity/: README.md
cloudapp_unity/ar_dragon/: UpgradeLog.htm
cloudapp_unity/ar_dragon/Assets/: New Terrain.asset
cloudapp_unity/ar_dragon/Assets/Lark/Plugins/: LarkXRAiVoice.h  LarkXRDataChannel.h
cloudapp_unity/ar_dragon/Assets/Lark/Scripts/: ApiBase.cs  DataChannelNativeApi.cs  GetExtraParams.cs  LarkManager.cs
cloudapp_unity/ar_dragon/Assets/Scenes/: Controller.cs  New Animator Controller.controller  NewBehaviourScript.cs  SampleScene.unity
cloudapp_unity/ar_dragon/ProjectSettings/: ProjectSettings.asset
cloudapp_unreal/: README..md
cloudapp_unreal/tmp_blank_4_27/Config/: DefaultEngine.ini  DefaultGame.ini
cloudapp_unreal/tmp_blank_4_27/Content/: VRPawn.uasset
cloudapp_unreal/tmp_blank_4_27/Content/StarterContent/Architecture/: Floor_400x400.uasset
cloudapp_unreal/tmp_blank_4_27/Content/StarterContent/Maps/: Minimal_Default.umap
